make another change in index.html and css in main branch

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <meta name="robots" content="noindex">
 </head>
 <body>
+    <p id="dog-name">
+        Roger
+        </p>
+        
 
 </body>
 </html>
